ncurses-6.3/form/form.h

typedef int Field_Options;
typedef void (*Form_Hook)(FORM *);
extern FORM_EXPORT(int)	field_info (const FIELD *,int *,int *,int *,int *,int *,int *);
extern FORM_EXPORT(int)	dynamic_field_info (const FIELD *,int *,int *,int *);
extern FORM_EXPORT(int)	move_field (FIELD *,int,int);
extern FORM_EXPORT(int)	set_field_fore (FIELD *,chtype);
extern FORM_EXPORT(int)	set_field_back (FIELD *,chtype);
extern FORM_EXPORT(int)	set_field_pad (FIELD *,int);
extern FORM_EXPORT(int)	field_pad (const FIELD *);
extern FORM_EXPORT(chtype)	field_fore (const FIELD *);
extern FORM_EXPORT(chtype)	field_back (const FIELD *);
extern FORM_EXPORT(Field_Options)	field_opts (const FIELD *);
extern FORM_EXPORT(FIELD **)	form_fields (const FORM *);
extern FORM_EXPORT(WINDOW *)	form_win (const FORM *);
extern FORM_EXPORT(WINDOW *)	form_sub (const FORM *);
extern FORM_EXPORT(int)	set_form_fields (FORM *,FIELD **);
extern FORM_EXPORT(int)	field_count (const FORM *);
extern FORM_EXPORT(int)	set_form_win (FORM *,WINDOW *);
extern FORM_EXPORT(int)	set_form_sub (FORM *,WINDOW *);
extern FORM_EXPORT(int)	scale_form (const FORM *,int *,int *);
extern FORM_EXPORT(int)	set_form_init (FORM *,Form_Hook);
extern FORM_EXPORT(int)	set_form_term (FORM *,Form_Hook);
extern FORM_EXPORT(int)	set_field_init (FORM *,Form_Hook);
extern FORM_EXPORT(int)	set_field_term (FORM *,Form_Hook);